Bugfix: Explicitly set `display: block` on masonry img elements to fix irregular whitespace between rows

--- a/static/css/photos-grid.css
+++ b/static/css/photos-grid.css
@@ -59,6 +59,7 @@ Masonry:
 .photos-grid--style-masonry .photos-grid__item img {
   width: 100%;
   height: auto;
+  display: block;
 }
 
 @media only screen and (min-width: 576px) {
